--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "django-cookie_consent_gutsh"
-version = "1.0.2"
+version = "1.1.0"
 authors = [
     { name="Artem Barskii", email="artemiy.barskiy@gmail.com" },
 ]
@@ -10,6 +10,8 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
+    "Framework :: Django :: 4.0",
+    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
 ]
 
 [project.urls]
