--- a/setup.cfg
+++ b/setup.cfg
@@ -1,18 +1,18 @@
 [metadata]
 name = django-cookie_consent_gutsh
-version = 1.0.2
+version = 1.1.0
 description = Cookie consent component for any Django web-site
 long_description = file: README.md
 url = https://www.barskiylab.com/
 author = Artem Barskii
 author_email = artemiy.barskiy@gmail.com
-license = MIT  # Will be changed later perhaps
+license = MIT
 classifiers =
     Environment :: Web Environment
     Framework :: Django
     Framework :: Django :: 4.0
     Intended Audience :: Developers
-    License :: OSI Approved :: BSD License
+    License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Programming Language :: Python
     Programming Language :: Python :: 3
