--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = django-cookie_consent_gutsh
-version = 1.1.2
+version = 1.1.5
 description = Cookie consent component for any Django web-site
 long_description = file: README.md
-url = https://www.barskiylab.com/
+url = https://github.com/gutsh/django-cookie-consent
 author = Artem Barskii
 author_email = artemiy.barskiy@gmail.com
 license = MIT
