--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include LICENSE
-include README.rst
+include README.md
 recursive-include cookie_consent/static *
 recursive-include cookie_consent/templates *
 recursive-include docs *
