--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "django-cookie_consent_gutsh"
-version = "1.1.2"
+name = "django-cookie-consent-gutsh"
+version = "1.1.5"
 authors = [
     { name="Artem Barskii", email="artemiy.barskiy@gmail.com" },
 ]
@@ -13,6 +13,8 @@ classifiers = [
     "Framework :: Django :: 4.0",
     "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
 ]
+requires-python = ">=3.10"
+dynamic = ["dependencies", "license"]
 
 [project.urls]
 "Homepage" = "https://github.com/gutsh/django-cookie-consent"
